# backend/src/routes/index.ts
@@ -1,12 +1,10 @@
 import { Router } from 'express';
+import equipeRoutes from './equipeRoutes';
+import atletaRoutes from './atletaRoutes';
 
 const router = Router();
 
-router.get('/', (req, res) => {
-  res.send(`
-    <h2 style="font-family: sans-serif; color: #1e3a8a;">🚀 EVPC Torneio API</h2>
-    <p>Acesse a documentação da API aqui: <a href="/api-docs">/api-docs</a></p>
-  `);
-});
+router.use('/equipes', equipeRoutes);
+router.use('/atletas', atletaRoutes);
 
 export default router;
